--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.6)
 project(SYLVAN)
 
-#add_definitions(-std=gnu99)
+ENABLE_TESTING()
+
 add_subdirectory(src) 
 add_subdirectory(test)
+
+ADD_TEST(SimpleTest ${CMAKE_CURRENT_BINARY_DIR}/test/test)
