--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 2.6)
 add_library (sylvan sylvan.c fast_hash.c llsched.c llvector.c llset.c llgcset.c runtime.c)
 
 #add_definitions(-std=gnu99)
+add_definitions(--coverage)
 target_link_libraries (sylvan m)
