--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
-ACLOCAL_AMFLAGS = -I m4
+ACLOCAL_AMFLAGS = -I m4 
 
-AM_CPPFLAGS = -I$(top_builddir) -std=c99
+AM_CPPFLAGS = -I$(top_builddir) 
 
 include_HEADERS = sylvan.h 
 
