--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,20 @@
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = src test
+AM_CPPFLAGS = -I$(top_builddir)
 
-#EXTRA_DIST = CHANGES m4/debug.m4
+include_HEADERS = src/sylvan.h
+
+lib_LTLIBRARIES = libsylvan.la
+
+libsylvan_la_SOURCES = \
+ src/sylvan.c \
+ src/llgcset.c \
+ src/llvector.c \
+ src/runtime.c \
+ src/fast_hash.c \
+ src/sylvan.h \
+ src/llvector.h \
+ src/runtime.h
+
+libsylvan_la_LDFLAGS = -version-info 0:0:0
+libsylvan_la_LIBADD = -lm
