--- a/Makefile.am
+++ b/Makefile.am
@@ -9,12 +9,10 @@ lib_LTLIBRARIES = libsylvan.la
 libsylvan_la_SOURCES = \
  src/sylvan.c \
  src/llgcset.c \
- src/llvector.c \
  src/runtime.c \
  src/fast_hash.c \
  src/sylvan.h \
- src/llvector.h \
- src/runtime.h
+ src/sylvan_runtime.h
 
 libsylvan_la_LDFLAGS = -version-info 0:0:0
 libsylvan_la_LIBADD = -lm
