--- a/configure.ac
+++ b/configure.ac
@@ -10,11 +10,7 @@ AC_DEFINE_UNQUOTED([MAJOR_VERSION], [$MAJOR_VERSION], [Sylvan's major version.])
 AC_DEFINE_UNQUOTED([MINOR_VERSION], [$MINOR_VERSION], [Sylvan's minor version.])
 
 AC_PROG_CC
-
-AM_PROG_LEX
-AC_PROG_YACC
-
-AC_PROG_CXX
+AM_PROG_AS
 
 AC_PROG_LIBTOOL
 
