Fix error in Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,7 +13,7 @@ libsylvan_la_SOURCES = \
  src/fast_hash.c \
  src/rng_hash_128.s \
  src/hash_mul.s \
- src/llcache.c
+ src/llcache.c \
  src/sylvan.h \
  src/sylvan_runtime.h 
 
