Maintenance on llgcset and llcache

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(sylvan_sources
   src/fast_hash.c
   src/llgcset.c
   src/hash_mul.s
+  src/rehash_mul.s
   src/llcache.c
   src/runtime.c
   src/rng_hash_128.s
