--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,7 @@ libsylvan_la_SOURCES = \
  src/fast_hash.c \
  src/rng_hash_128.s \
  src/hash_mul.s \
+ src/rehash_mul.s \
  src/llcache.c \
  src/sylvan.h \
  src/sylvan_runtime.h 
