--- a/Makefile.am
+++ b/Makefile.am
@@ -9,15 +9,12 @@ lib_LTLIBRARIES = libsylvan.la
 libsylvan_la_SOURCES = \
  src/sylvan.c \
  src/llgcset.c \
- src/runtime.c \
- src/fast_hash.c \
  src/rng_hash_128.s \
  src/hash_mul.s \
  src/rehash_mul.s \
  src/llcache.c \
  src/llsimplecache.c \
- src/sylvan.h \
- src/sylvan_runtime.h 
+ src/sylvan.h 
 
 libsylvan_la_LDFLAGS = -version-info 0:0:0
 libsylvan_la_LIBADD = -lm 
