--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .deps/
+.libs/
 Makefile
 Makefile.in
 aclocal.m4
@@ -17,3 +18,7 @@ tools/
 CMakeCache.txt
 CMakeFiles
 cmake_install.cmake
+*.lo
+*.o
+*.la
+
