Support Mac OSX

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,12 +12,14 @@ lib_LTLIBRARIES = libsylvan.la
 libsylvan_la_SOURCES = \
  src/sylvan.c \
  src/llgcset.c \
- src/rng_hash_128.s \
- src/hash_mul.s \
- src/rehash_mul.s \
  src/llsimplecache.c \
- src/sylvan.h \
- src/wool.c
+ src/sylvan.h 
+
+libsylvan_la_SOURCES += src/wool.c
+
+libsylvan_la_SOURCES += src/hash_mul.S
+libsylvan_la_SOURCES += src/rehash_mul.S
+libsylvan_la_SOURCES += src/rng_hash_128.S
 
 libsylvan_la_LDFLAGS = -version-info 0:0:0
 libsylvan_la_LIBADD = -lm 
