Fix compilation issues and removed NOCACHE and AFFINITY options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,16 @@ project(sylvan C)
 enable_language(ASM)
 enable_testing()
 
-option(SYLVAN_NOCACHE "No Operations Cache" OFF)
 option(SYLVAN_STATS "Create statistics" ON)
 option(USE_NUMA "Use NUMA" OFF)
-option(SET_AFFINITY "Set affinity of workers" OFF)
 
 include(CheckIncludeFiles)
 if(USE_NUMA)
   check_include_files(numa.h HAVE_NUMA_H)
   if(HAVE_NUMA_H)
     set (EXTRA_LIBS ${EXTRA_LIBS} numa)
+  else()
+    message(send_error "ERROR: Using NUMA but no numa.h found!")
   endif()
 else()
   set(HAVE_NUMA_H OFF)
