Fixes for sylvan compilation issues (reported by Axel Belinfante)

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,11 +11,18 @@ lib_LTLIBRARIES = libsylvan.la
 
 libsylvan_la_SOURCES = \
  src/sylvan.c \
+ src/sylvan.h \
  src/llgcset.c \
+ src/llgcset.h \
  src/llsimplecache.c \
- src/sylvan.h 
+ src/llsimplecache.h \
+ src/llci.h \
+ src/tls.h \
+ src/atomics.h \
+ src/ticketlock.h 
 
 libsylvan_la_SOURCES += src/wool.c
+libsylvan_la_SOURCES += src/wool.h
 
 libsylvan_la_SOURCES += src/hash_mul.S
 libsylvan_la_SOURCES += src/rehash_mul.S
