Replace HAVE_NUMA_H config.h define by gcc -D define

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,4 +29,5 @@ libsylvan_la_LIBADD = -lm
 if HAVE_NUMA_H
 libsylvan_la_LIBADD += -lnuma
 libsylvan_la_SOURCES += src/numa-tools.c
+AM_CFLAGS += -DUSE_NUMA=1
 endif
