--- a/Makefile.am
+++ b/Makefile.am
@@ -31,6 +31,6 @@ libsylvan_la_LIBADD = -lm
 
 if HAVE_NUMA_H
 libsylvan_la_LIBADD += -lnuma
-libsylvan_la_SOURCES += src/numa-tools.c
+libsylvan_la_SOURCES += src/numa_tools.c
 AM_CFLAGS += -DUSE_NUMA=1
 endif
