Modifications to allow compiling in C++11 (including changes to Lace)

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,7 @@ libsylvan_la_LIBADD = -lm
 
 if HAVE_NUMA_H
 libsylvan_la_LIBADD += -lnuma
-libsylvan_la_SOURCES += src/numa_tools.c
+libsylvan_la_SOURCES += src/numa_tools.c src/numa_tools.h
 AM_CFLAGS += -DUSE_NUMA=1
 endif
 
