--- a/Makefile.am
+++ b/Makefile.am
@@ -14,6 +14,8 @@ libsylvan_la_SOURCES = \
  src/barrier.h \
  src/sha2.c \
  src/sha2.h \
+ src/lddmc.c \
+ src/lddmc.h \
  src/sylvan.c \
  src/sylvan.h \
  src/llmsset.c \
