--- a/Makefile.in
+++ b/Makefile.in
@@ -135,16 +135,16 @@ LTLIBRARIES = $(lib_LTLIBRARIES)
 am__DEPENDENCIES_1 =
 libsylvan_la_DEPENDENCIES = $(am__DEPENDENCIES_1)
 am__libsylvan_la_SOURCES_DIST = src/barrier.c src/barrier.h src/sha2.c \
-	src/sha2.h src/sylvan.c src/sylvan.h src/llmsset.c \
-	src/llmsset.h src/cache.h src/tls.h src/atomics.h src/avl.h \
-	src/lace.c src/lace.h src/refs.h src/hash24.h src/hash16.h \
-	src/numa_tools.c src/numa_tools.h
+	src/sha2.h src/lddmc.c src/lddmc.h src/sylvan.c src/sylvan.h \
+	src/llmsset.c src/llmsset.h src/cache.h src/tls.h \
+	src/atomics.h src/avl.h src/lace.c src/lace.h src/refs.h \
+	src/hash24.h src/hash16.h src/numa_tools.c src/numa_tools.h
 am__dirstamp = $(am__leading_dot)dirstamp
 @HAVE_NUMA_TRUE@am__objects_1 = src/libsylvan_la-numa_tools.lo
 am_libsylvan_la_OBJECTS = src/libsylvan_la-barrier.lo \
-	src/libsylvan_la-sha2.lo src/libsylvan_la-sylvan.lo \
-	src/libsylvan_la-llmsset.lo src/libsylvan_la-lace.lo \
-	$(am__objects_1)
+	src/libsylvan_la-sha2.lo src/libsylvan_la-lddmc.lo \
+	src/libsylvan_la-sylvan.lo src/libsylvan_la-llmsset.lo \
+	src/libsylvan_la-lace.lo $(am__objects_1)
 libsylvan_la_OBJECTS = $(am_libsylvan_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -355,10 +355,10 @@ libsylvan_la_CFLAGS = -g -O2 -Wall -Wextra -fno-strict-aliasing \
 libsylvan_la_LIBADD = -lm $(am__append_1)
 include_HEADERS = src/sylvan.h src/lace.h src/atomics.h
 libsylvan_la_SOURCES = src/barrier.c src/barrier.h src/sha2.c \
-	src/sha2.h src/sylvan.c src/sylvan.h src/llmsset.c \
-	src/llmsset.h src/cache.h src/tls.h src/atomics.h src/avl.h \
-	src/lace.c src/lace.h src/refs.h src/hash24.h src/hash16.h \
-	$(am__append_2)
+	src/sha2.h src/lddmc.c src/lddmc.h src/sylvan.c src/sylvan.h \
+	src/llmsset.c src/llmsset.h src/cache.h src/tls.h \
+	src/atomics.h src/avl.h src/lace.c src/lace.h src/refs.h \
+	src/hash24.h src/hash16.h $(am__append_2)
 all: all-am
 
 .SUFFIXES:
@@ -442,6 +442,8 @@ src/libsylvan_la-barrier.lo: src/$(am__dirstamp) \
 	src/$(DEPDIR)/$(am__dirstamp)
 src/libsylvan_la-sha2.lo: src/$(am__dirstamp) \
 	src/$(DEPDIR)/$(am__dirstamp)
+src/libsylvan_la-lddmc.lo: src/$(am__dirstamp) \
+	src/$(DEPDIR)/$(am__dirstamp)
 src/libsylvan_la-sylvan.lo: src/$(am__dirstamp) \
 	src/$(DEPDIR)/$(am__dirstamp)
 src/libsylvan_la-llmsset.lo: src/$(am__dirstamp) \
@@ -464,6 +466,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/libsylvan_la-barrier.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/libsylvan_la-lace.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/libsylvan_la-lddmc.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/libsylvan_la-llmsset.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/libsylvan_la-numa_tools.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@src/$(DEPDIR)/libsylvan_la-sha2.Plo@am__quote@
@@ -506,6 +509,13 @@ src/libsylvan_la-sha2.lo: src/sha2.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='src/sha2.c' object='src/libsylvan_la-sha2.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libsylvan_la_CFLAGS) $(CFLAGS) -c -o src/libsylvan_la-sha2.lo `test -f 'src/sha2.c' || echo '$(srcdir)/'`src/sha2.c
+
+src/libsylvan_la-lddmc.lo: src/lddmc.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libsylvan_la_CFLAGS) $(CFLAGS) -MT src/libsylvan_la-lddmc.lo -MD -MP -MF src/$(DEPDIR)/libsylvan_la-lddmc.Tpo -c -o src/libsylvan_la-lddmc.lo `test -f 'src/lddmc.c' || echo '$(srcdir)/'`src/lddmc.c
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) src/$(DEPDIR)/libsylvan_la-lddmc.Tpo src/$(DEPDIR)/libsylvan_la-lddmc.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(AM_V_CC)source='src/lddmc.c' object='src/libsylvan_la-lddmc.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(AM_V_CC@am__nodep@)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libsylvan_la_CFLAGS) $(CFLAGS) -c -o src/libsylvan_la-lddmc.lo `test -f 'src/lddmc.c' || echo '$(srcdir)/'`src/lddmc.c
 
 src/libsylvan_la-sylvan.lo: src/sylvan.c
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libsylvan_la_CFLAGS) $(CFLAGS) -MT src/libsylvan_la-sylvan.lo -MD -MP -MF src/$(DEPDIR)/libsylvan_la-sylvan.Tpo -c -o src/libsylvan_la-sylvan.lo `test -f 'src/sylvan.c' || echo '$(srcdir)/'`src/sylvan.c
