Added hash functions for BDDs (sha2 based)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,8 @@ set (CMAKE_C_FLAGS "-g -O3 -Wextra -Wall -Werror -D${NUMA_DEF}")
 set(sylvan_sources
   src/barrier.h
   src/barrier.c
+  src/sha2.h
+  src/sha2.c
   src/sylvan.h
   src/sylvan.c
   src/llmsset.c
