--- a/Makefile.am
+++ b/Makefile.am
@@ -25,8 +25,9 @@ libsylvan_la_SOURCES = \
  src/lace.c \
  src/lace.h \
  src/refs.h \
- src/murmur.c \
- src/murmur.h
+ src/hash.c \
+ src/hash.h \
+ src/hash24.h
 
 if HAVE_NUMA
 libsylvan_la_LIBADD += -lnuma
