--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,8 @@ set(sylvan_sources
   src/llmsset.h
   src/lace.c
   src/lace.h
-  src/hash.c
-  src/hash.h
   src/hash24.h
+  src/hash16.h
   src/refs.h
   ${EXTRA_SRC}
 )
