LDDmc test program now uses argp for parameter handling and supports gperftools cpu profiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,11 +15,20 @@ if(USE_NUMA)
     set (EXTRA_SRC ${EXTRA_SRC} src/numa_tools.c)
     set (NUMA_DEF "USE_NUMA=1")
   else()
-    message(send_error "ERROR: Using NUMA but no numa.h found!")
+    message("ERROR: Using NUMA but no numa.h found!")
     set (NUMA_DEF "USE_NUMA=0")
   endif()
 else()
   set (NUMA_DEF "USE_NUMA=0")
+endif()
+
+check_include_files("gperftools/profiler.h" HAVE_PROFILER)
+
+if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  # add argp library for OSX
+  set(ARGP_LIBS "argp")
+else()
+  set(ARGP_LIBS "")
 endif()
 
 set (CMAKE_ASM_FLAGS "-g")
@@ -64,4 +73,8 @@ add_executable(mc test/mc.c)
 target_link_libraries(mc sylvan)
 
 add_executable(lddmc test/lddmc.c)
-target_link_libraries(lddmc sylvan)
+target_link_libraries(lddmc sylvan ${ARGP_LIBS})
+if(HAVE_PROFILER)
+  set_target_properties(lddmc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
+  target_link_libraries(lddmc profiler ${ARGP_LIBS})
+endif()
