Add getrss.h and getrss.c to makefiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ set(sylvan_sources
   src/lace.h
   src/hash24.h
   src/hash16.h
+  src/getrss.h
+  src/getrss.c
   src/cache.h
   src/refs.h
   ${EXTRA_SRC}
