--- a/Makefile.am
+++ b/Makefile.am
@@ -27,6 +27,8 @@ libsylvan_la_SOURCES = \
  src/lace.c \
  src/lace.h \
  src/refs.h \
+ src/getrss.c \
+ src/getrss.h \
  src/hash24.h \
  src/hash16.h
 
