split sylvan.h into sylvan_bdd.h and sylvan_ldd.h; rename sylvan.c to sylvan_bdd.c; rename lddmc. to sylvan_ldd.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,10 @@ set(sylvan_sources
   src/sha2.h
   src/sha2.c
   src/sylvan.h
-  src/sylvan.c
-  src/lddmc.c
+  src/sylvan_bdd.h
+  src/sylvan_bdd.c
+  src/sylvan_ldd.h
+  src/sylvan_ldd.c
   src/llmsset.c
   src/llmsset.h
   src/lace.c
