--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ set(sylvan_sources
   src/sha2.h
   src/sha2.c
   src/sylvan.h
+  src/sylvan_config.h
   src/sylvan_bdd.h
   src/sylvan_bdd.c
   src/sylvan_ldd.h
