examples/mc: use argp library and gperftools integration

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 set(CMAKE_C_FLAGS "-g -O3 -Wextra -Wall -Werror -fno-strict-aliasing -D${HWLOC_DEF} -std=gnu11")
 
 add_executable(mc mc.c)
-target_link_libraries(mc sylvan)
+target_link_libraries(mc sylvan ${ARGP_LIBS})
 if(HAVE_PROFILER)
     set_target_properties(mc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
     target_link_libraries(mc profiler)
@@ -22,5 +22,5 @@ add_executable(lddmc lddmc.c)
 target_link_libraries(lddmc sylvan ${ARGP_LIBS})
 if(HAVE_PROFILER)
     set_target_properties(lddmc PROPERTIES COMPILE_DEFINITIONS "HAVE_PROFILER")
-    target_link_libraries(lddmc profiler ${ARGP_LIBS})
+    target_link_libraries(lddmc profiler)
 endif()
